--- a/extras/ignored_environments.yml.sample
+++ b/extras/ignored_environments.yml.sample
@@ -1,10 +1,10 @@
 ---
 :obsolete:
-  :environments:
   - an_environment_you wish_to_keep_in_foreman
   - another_environment_you wish_to_keep_in_foreman
 :new:
-  :environments:
   - an_environment_that_you_do_not_want_to_add_to_foreman
   - another_environment_that_you_do_not_want_to_add_to_foreman
-
+:updated:
+  - an_environment_that_you_do_not_want_to_update_in_foreman
+  - another_environment_that_you_do_not_want_to_update_in_foreman
